--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+//        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
@@ -16,7 +17,16 @@ buildscript {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.39.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+
+        
     }
+
+
+
+
+
+
 }
 
 task clean(type: Delete) {
